--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../static/style.css" />
     <title>BOCH Restaurant</title>
   </head>
   <body>
     <!-- Header to contain our logo and navigation -->
-    <header>
+    <header class="head">
       <a href="index.html">
         <h1 id="logo">BOCH Restaurant</h1>
       </a>
       <nav id="menu">
-        <ul>
+        <ul class=>
           <li>
             <a href="#">Home</a>
           </li>
@@ -32,31 +44,58 @@
         </ul>
       </nav>
     </header>
+    <section>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../media/assets/boch.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../media/assets/bochfood.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </button>
+    </div>
+    </section>
+    <hr />
     <!-- Create footer with seperate divs for different categories of information-->
-    <footer>
-      <div class="contact-us">
-        <h3>Contact Us</h3>
-        <p>+49 16096286371</p>
-        <p>info@bochrestaurant.com</p>
-      </div>
-      <div>
-        <h3>Opening Hours</h3>
-        <p>Mo - Fri: 09:00 - 22:00</p>
-        <p>Sat: 08:00 - 22:00</p>
-        <p>Sun: 08:00 - 18:00</p>
-      </div>
-      <div>
-        <h3>Adress</h3>
-        <p>Mayener Strasse 130</p>
-        <p>56070 Koblenz, Germany</p>
-      </div>
-      <div>
-        <h3>Follow Us</h3>
-        <p><a href="facebook.com">Facebook</a></p>
-        <p><a href="instagram.com">Instagram</a></p>
-        <p><a href="twitter.com">Twitter</a></p>
-      </div>
-    </footer>
+    <div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>Contact Us</h3>
+              <p>+49 16096286371</p>
+              <p>info@bochrestaurant.com</p>
+            </div>
+            <div class="col">
+              <h3>Open Hours</h3>
+              <p>Mo - Fri: 09:00 - 22:00</p>
+              <p>Sat: 08:00 - 22:00</p>
+              <p>Sun: 08:00 - 18:00</p>
+            </div>
+            <div class="col">
+              <h3>Adress</h3>
+              <p>Mayener Strasse 130</p>
+              <p>56070 Koblenz, Germany</p>
+            </div>
+            <div class="col">
+              <h3>Follow Us</h3>
+              <p><a href="facebook.com">Facebook</a></p>
+              <p><a href="instagram.com">Instagram</a></p>
+              <p><a href="twitter.com">Twitter</a></p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     <script
       src="https://kit.fontawesome.com/38ea61cdd6.js"
       crossorigin="anonymous"
