Build functionality to make reservations and update reservations

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
             <a href="#">About Us</a>
           </li>
           <li>
-            <a href="reservation/">Reservation</a>
+            <a href="{% url 'reservation' %}">Reservation</a>
           </li>
           <li>
             <a href="#">Logout</a>
